Right aligning larger sidebar to account for some spacing issues

--- a/static/css/master.css
+++ b/static/css/master.css
@@ -31,6 +31,7 @@ div#date_filter { color: #ccc; background: #333; padding: 10px 0; margin-bottom:
 div#date_filter form ul { list-style-type: none; }
 div#date_filter h4 { display: inline; padding: 0 10px; }
 div#date_filter form ul li { display: inline; width: 10%; padding-right: 3%; }
+div#sidebar_large { text-align: right; }
 
 /* AD STYLES */
 div.small_ad, div.big_ad { padding: 15px; text-align: center; }
